removing zgc test